namespace FakePerson.lib.Models;

public abstract record AbstractName
{
    public required string FirstName { get; set; }
}