namespace FakePerson.lib.Models.Names;

public record SimpleName : AbstractName
{
    
}