namespace FakePerson.lib.Models.Phones;

public record SimplePhone : AbstractPhone {}